--- a/faq-app/src/App.css
+++ b/faq-app/src/App.css
@@ -6,31 +6,26 @@
   margin: 0;
 }
 
-.App {
-  text-align: center;
+.Faq-question {
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #f2f2f2;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: left;
 }
 
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Faq-question:hover {
+  background-color: #e6e6e6;
 }
 
-.App-link {
-  color: #61dafb;
+.Faq-answer {
+  display: none;
+  padding: 10px;
+  background-color: #f9f9f9;
+  text-align: left;
 }
 
-.Question {
-  color: green;
+.Faq-answer.show {
+  display: block;
 }
-
-.Question-two {
-  color: red;
-}
-
